--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </svg>
     </div>
     <div>
-        <p class="try">try to resize your browser</p>
+        <p class="try">try to resize your browser or zoom in and zoom out</p>
     </div>
 </body>
 
